Fix default alert text being hard to read

--- a/stylus/modules/notice.styl
+++ b/stylus/modules/notice.styl
@@ -3,7 +3,7 @@
     background: notice.bg;
     border-radius: 3px;
 	box-sizing: border-box;
-    color: notice.color;
+    color: #212121;
     line-height: 40px;
 	min-height: 40px;
 	padding: 0 15px;
@@ -12,14 +12,17 @@
 
     &.ion-info {
         background: notice.info-bg;
+        color: notice.color;
     }
 
     &.ion-alert {
         background: notice.alert-bg;
+        color: notice.color;
     }
 
     &.ion-warning {
         background: notice.warning-bg;
+        color: notice.color;
     }
 
     .material-icons {
